test/libhyperion/syntaxTests/types/function_types/selector/state_variable_selector_super.hyp
contract B {
    function() external public g;
}

contract C is B {
    bytes4 constant s4 = super.g.selector;
}
// ----
// TypeError 4888: (17-45): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
